Sección banner empezada
En la sección banner se empezo la vista para vista en móvil
resta probar para tabler y desktop

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,41 @@
     <title>Manage Landing Page Master</title>
 </head>
 <body>
-      
+    <header class="main-header l-container">
+        <div class="main-header__logo">
+            <img src="images/logo.svg" alt="Logo Principal" class="header-logo">
+            <img id="show-toggle" src="images/icon-hamburger.svg" alt="Menu" class="header-hamburger">
+        </div>
+        <nav id="main-menu" class="main-menu">
+            <div class="main-menu__logo">
+                <!-- <img class="header-logo" src="/assets/img/logo-bookmark-footer.svg" alt=""> -->
+                <!-- <img id="main-menu__close" class="images-network" src="/assets/img/icon-close.svg" alt="Icon Close"> -->
+            </div>
+            <ul class="main-menu__list center">
+                <li class="main-menu__item"><a class="main-menu__link" href="#">Princing</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#">Prodcut</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#">About Us</a></li>
+                <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Careers</a></li>
+                <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Commnity</a></li>
+
+            </ul>
+            <!-- <div class="menu-network center m">
+                <img class="images-network" src="/assets/img/icon-facebook.svg" alt="Facebook">
+                <img class="images-network" src="/assets/img/icon-twitter.svg" alt="Twitter">
+
+            </div> -->
+        </nav>
+    </header>
+
+    <div class="banner l-container">
+        <img class="banner-img" src="images/illustration-intro.svg" alt="Image Principal">
+        <div class="banner-content center-responsive">
+            <h1 class="banner-content__title"> Bring everyone together to build better products.</h1>
+            <p class="paragraph mb-1"> Manage provides all the functionality your team needs, without 
+                the complexity. Our software is tailor-made for modern digital 
+                product teams. </p>
+            <a href="#" class="button button-started">Get Started</a>
+        </div>
+    </div>
 </body>
 </html>
