--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css?t=1605326043607">
+    <link rel="stylesheet" href="styles/styles.css?t=1605673545808">
     <title>Manage Landing Page Master</title>
 </head>
+
 <body>
-    <header class="main-header l-container">
+    <header class="main-header l-container mb-separation">
         <div class="main-header__logo">
             <img src="images/logo.svg" alt="Logo Principal" class="header-logo">
             <img id="show-toggle" src="images/icon-hamburger.svg" alt="Menu" class="header-hamburger">
@@ -29,15 +31,104 @@
         </nav>
     </header>
 
-    <div class="banner l-container">
+    <div class="banner l-container mb-separation">
         <img class="banner-img" src="images/illustration-intro.svg" alt="Image Principal">
         <div class="banner-content center-responsive">
             <h1 class="banner-content__title"> Bring everyone together to build better products.</h1>
-            <p class="paragraph mb-1"> Manage provides all the functionality your team needs, without 
-                the complexity. Our software is tailor-made for modern digital 
+            <p class="paragraph mb-2"> Manage provides all the functionality your team needs, without
+                the complexity. Our software is tailor-made for modern digital
                 product teams. </p>
-            <a href="#" class="button button-started">Get Started</a>
+            <a href="#" class="button-started">Get Started</a>
+        </div>
+    </div>
+
+    <article class="about center-responsive mb-separation l-container">
+        <section class="mb-3">
+            <h2 class="about__title">What’s different about Manage?</h2>
+            <p class="about__paragraph">Manage provides all the functionality your team needs, without
+                the complexity. Our software is tailor-made for modern digital
+                product teams.</p>
+        </section>
+        <section class="about__items">
+            <div class="mb-3">
+                <span class="items__button">01</span>
+                <h3 class="items__title">Track company-wide progress</h3>
+                <p>See how your day-to-day tasks fit into the wider vision. Go from
+                    tracking progress at the milestone level all the way done to the
+                    smallest of details. Never lose sight of the bigger picture again.</p>
+            </div>
+            <div class="mb-3">
+                <span class="items__button">02</span>
+                <h3 class="items__title">Advanced built-in reports</h3>
+                <p>Set internal delivery estimates and track progress toward company
+                    goals. Our customisable dashboard helps you build out the reports
+                    you need to keep key stakeholders informed.</p>
+            </div>
+            <div class="mb-3">
+                <span class="items__button">03</span>
+                <h3 class="items__title">Everything you need in one place</h3>
+                <p>Stop jumping from one service to another to communicate, store files,
+                    track tasks and share documents. Manage offers an all-in-one team
+                    productivity solution.</p>
+            </div>
+        </section>
+    </article>
+
+    <article class="testimonial mb-separation center">
+        <h2 class="center mb-separation">Whay they've said</h2>
+        <div class="card l-container">
+            <div class="card__items center">
+                <img class="card__img" src="images/avatar-ali.png" alt="">
+                <span class="card__name">Anisha Li</span>
+                <p class="card__paragraph">
+                    “Manage has supercharged our team’s workflow. The ability to maintain
+                    visibility on larger milestones at all times keeps everyone motivated.”
+                </p>
+            </div>
+            <div class="card__items center">
+                <img class="card__img" src="images/avatar-anisha.png" alt="">
+                <span class="card__name">Ali Bravo</span>
+                <p class="card__paragraph">
+                    “We have been able to cancel so many other subscriptions since using
+                    Manage. There is no more cross-channel confusion and everyone is much
+                    more focused.”
+                </p>
+            </div>
+            <div class="card__items center">
+                <img class="card__img" src="images/avatar-richard.png" alt="">
+                <span class="card__name">Richard Watts</span>
+                <p class="card__paragraph">
+                    “Manage allows us to provide structure and process. It keeps us organized
+                    and focused. I can’t stop recommending them to everyone I talk to!”
+                </p>
+            </div>
+            <div class="card__items center">
+                <img class="card__img" src="images/avatar-shanai.png" alt="">
+                <span class="card__name">Shanai Gough</span>
+                <p class="card__paragraph">
+                    “Their software allows us to track, manage and collaborate on our projects
+                    from anywhere. It keeps the whole team in-sync without being intrusive.”
+                </p>
+            </div>
+        </div>
+
+        
+        <div class="card__slide">
+            <span class="slide__item"></span>
+            <span class="slide__item"></span>
+            <span class="slide__item"></span>
+            <span class="slide__item"></span>
+        </div>
+
+        <a href="#" class="button-started">Get Started</a>
+    </article>
+
+    <div class="content__start center">
+        <div class="content__padding">
+            <h2 class="start__title">Simplify how your team works today.</h2>
+            <a class="button__start" href="#">Get Started</a>
         </div>
     </div>
 </body>
+
 </html>
