Seccion de footer avanzado
Se avanzo las secciones en el footer de form, nav y about
solo esta para las versiones en movil no en Desktop

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css?t=1605673545808">
+    <link rel="stylesheet" href="styles/styles.css?t=1607713889635">
     <title>Manage Landing Page Master</title>
 </head>
 
@@ -129,6 +129,46 @@
             <a class="button__start" href="#">Get Started</a>
         </div>
     </div>
+
+    <footer class="footer">
+
+        <div class="footer__form mb-separation">
+            <input class="input__email" type="text" placeholder="Updates in your inbox…">
+            <a href="#" class="button--footer center">Go</a>
+        </div>
+        
+        <nav class="footer__nav mb-separation">
+            <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="">Home</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Pricing</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Products</a></li>
+                <li class="nav__item"><a class="nav__link" href="">About Us</a></li>
+            </ul>
+
+            <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="">Careers</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Comunnity</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Privacy Policy</a></li>
+            </ul>
+            
+        </nav>
+
+        <div class="footer__about l-container">
+            <div class="footer__icons">
+                <img class="footer__images" src="images/icon-facebook.svg" alt="Facebook">
+                <img class="footer__images" src="images/icon-youtube.svg" alt="Youtube">
+                <img class="footer__images" src="images/icon-twitter.svg" alt="Twitter">
+                <img class="footer__images" src="images/icon-pinterest.svg" alt="Pinterest">
+                <img class="footer__images" src="images/icon-instagram.svg" alt="Instagram">
+            </div>
+            <div>
+                <img src="images/logo.svg" alt="Logo">
+            </div>
+            <div>
+                <span>Copyright 2020. All Rights Reserved</span>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
