--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css?t=1607713889635">
+    <link rel="stylesheet" href="styles/styles.css?t=1609348365431">
     <title>Manage Landing Page Master</title>
 </head>
 
@@ -162,10 +162,10 @@
                 <img class="footer__images" src="images/icon-instagram.svg" alt="Instagram">
             </div>
             <div>
-                <img src="images/logo.svg" alt="Logo">
+                <img class="footer__logo" src="images/logo_white.svg" alt="Logo">
             </div>
-            <div>
-                <span>Copyright 2020. All Rights Reserved</span>
+            <div class="l-container credits">
+                <span class="credits__paragraph">Copyright 2020. All Rights Reserved</span>
             </div>
         </div>
     </footer>
