--- a/src/index.html
+++ b/src/index.html
@@ -166,10 +166,10 @@
                 <img class="footer__images" src="images/icon-instagram.svg" alt="Instagram">
             </div>
             <div>
-                <img src="images/logo.svg" alt="Logo">
+                <img class="footer__logo" src="images/logo_white.svg" alt="Logo">
             </div>
-            <div>
-                <span>Copyright 2020. All Rights Reserved</span>
+            <div class="l-container credits">
+                <span class="credits__paragraph">Copyright 2020. All Rights Reserved</span>
             </div>
         </div>
     </footer>
