--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,13 @@
 <body>
     <header class="main-header l-container mb-separation">
         <div class="main-header__logo">
-            <img src="images/logo.svg" alt="Logo Principal" class="header-logo">
-            <img id="show-toggle" src="images/icon-hamburger.svg" alt="Menu" class="header-hamburger">
+            <img                 src="images/logo.svg" alt="Logo Principal" class="header-logo">
+            <img id="show-menu"  src="images/icon-hamburger.svg" alt="Menu" class="header-hamburger">
+            <img id="close-menu" src="images/icon-close.svg"    alt="Close" class="header-hamburger close-menu" >
         </div>
-        <nav id="main-menu" class="main-menu">
-            <div class="main-menu__logo">
-                <!-- <img class="header-logo" src="/assets/img/logo-bookmark-footer.svg" alt=""> -->
-                <!-- <img id="main-menu__close" class="images-network" src="/assets/img/icon-close.svg" alt="Icon Close"> -->
-            </div>
-            <ul class="main-menu__list center">
+        <nav id="main-menu">
+            <div class="main-menu__logo"></div>
+            <ul id="main-menu__list" class="main-menu__list center">
                 <li class="main-menu__item"><a class="main-menu__link" href="#">Princing</a></li>
                 <li class="main-menu__item"><a class="main-menu__link" href="#">Prodcut</a></li>
                 <li class="main-menu__item"><a class="main-menu__link" href="#">About Us</a></li>
@@ -27,11 +25,6 @@
                 <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Commnity</a></li>
 
             </ul>
-            <!-- <div class="menu-network center m">
-                <img class="images-network" src="/assets/img/icon-facebook.svg" alt="Facebook">
-                <img class="images-network" src="/assets/img/icon-twitter.svg" alt="Twitter">
-
-            </div> -->
         </nav>
     </header>
 
@@ -173,6 +166,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/scripts-min.js"></script>
 </body>
 
 </html>
