Se finaliza proyecto

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css?t=1610860151575">
+    <link rel="stylesheet" href="styles/styles.css?t=1610927907532">
     <title>Manage Landing Page Master</title>
 </head>
 
@@ -33,7 +33,7 @@
 
     <div class="banner l-container">
         <img class="banner-img" src="images/illustration-intro.svg" alt="Image Principal">
-        <div class="banner-content center">
+        <div class="banner-content">
             <h1 class="banner-title"> Bring everyone together to build better products.</h1>
             <p class="paragraph mb-2"> Manage provides all the functionality your team needs, without
                 the complexity. Our software is tailor-made for modern digital
@@ -134,9 +134,9 @@
 
     <footer class="footer">
 
-        <form class="footer__form mb-separation">
-            <input class="input__email" type="text" placeholder="Updates in your inbox…">
-            <a href="#" class="button--footer center">Go</a>
+        <form id="form" class="footer__form mb-separation">
+            <input id="inputEmail" class="input__email" type="text" placeholder="Updates in your inbox…">
+            <button class="button--footer center">Go</button>
         </form>
         
         <nav class="footer__nav mb-separation">
@@ -172,7 +172,7 @@
         </div>
     </footer>
 
-    <script src="js/index.js?t=1610860151575"></script>
+    <script src="js/index.js?t=1610927907532"></script>
 </body>
 
 </html>
