--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
     <div class="banner l-container ">
         <img class="banner-img" src="images/illustration-intro.svg" alt="Image Principal">
-        <div class="banner-content center">
+        <div class="banner-content">
             <h1 class="banner-title"> Bring everyone together to build better products.</h1>
             <p class="paragraph mb-2"> Manage provides all the functionality your team needs, without
                 the complexity. Our software is tailor-made for modern digital
@@ -134,9 +134,9 @@
 
     <footer class="footer">
 
-        <form class="footer__form mb-separation">
-            <input class="input__email" type="text" placeholder="Updates in your inbox…">
-            <a href="#" class="button--footer center">Go</a>
+        <form id="form" class="footer__form mb-separation">
+            <input id="inputEmail" class="input__email" type="text" placeholder="Updates in your inbox…">
+            <button class="button--footer center">Go</button>
         </form>
         
         <nav class="footer__nav mb-separation">
