Fix en tamaños de fuentes y estados de hover

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css?t=1610927907532">
+    <link rel="stylesheet" href="styles/styles.css?t=1610991148244">
     <title>Manage Landing Page Master</title>
 </head>
 
@@ -19,7 +19,7 @@
             <div class="main-menu__logo"></div>
             <ul id="main-menu__list" class="main-menu__list center">
                 <li class="main-menu__item"><a class="main-menu__link" href="#">Princing</a></li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#">Prodcut</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#">Product</a></li>
                 <li class="main-menu__item"><a class="main-menu__link" href="#">About Us</a></li>
                 <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Careers</a></li>
                 <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Commnity</a></li>
@@ -172,7 +172,7 @@
         </div>
     </footer>
 
-    <script src="js/index.js?t=1610927907532"></script>
+    <script src="js/index.js?t=1610991148244"></script>
 </body>
 
 </html>
