--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <div class="main-menu__logo"></div>
             <ul id="main-menu__list" class="main-menu__list center">
                 <li class="main-menu__item"><a class="main-menu__link" href="#">Princing</a></li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#">Prodcut</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#">Product</a></li>
                 <li class="main-menu__item"><a class="main-menu__link" href="#">About Us</a></li>
                 <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Careers</a></li>
                 <li class="main-menu__item"><a class="main-menu__link item-login" href="#">Commnity</a></li>
